--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "loadash": "^1.0.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
         "vite": "^5.0.0",
         "vue": "^3.4.0"
     },
@@ -24,7 +24,10 @@
         "@inertiajs/vue3": "^1.0.14",
         "@vitejs/plugin-vue": "^5.0.3",
         "@vue/server-renderer": "^3.4.15",
+        "lodash.debounce": "^4.0.8",
+        "sweetalert2": "^11.6.13",
         "uuid": "^9.0.1",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "vue3-toastify": "^0.2.1"
     }
 }
