--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/server-renderer": "^3.4.0",
         "alpinejs": "^3.4.2",
@@ -24,6 +23,8 @@
         "@inertiajs/vue3": "^1.0.14",
         "@vitejs/plugin-vue": "^5.0.3",
         "@vue/server-renderer": "^3.4.15",
+        "@vueuse/core": "^10.7.2",
+        "lodash": "^4.17.21",
         "lodash.debounce": "^4.0.8",
         "sweetalert2": "^11.6.13",
         "uuid": "^9.0.1",
