--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
         "@vitejs/plugin-vue": "^5.0.3",
         "@vue/server-renderer": "^3.4.15",
         "@vueuse/core": "^10.7.2",
+        "jquery": "^3.7.1",
         "lodash": "^4.17.21",
         "lodash.debounce": "^4.0.8",
         "sweetalert2": "^11.6.13",
         "uuid": "^9.0.1",
         "vue-loader": "^17.4.2",
+        "vue3-select2-component": "^0.1.7",
         "vue3-toastify": "^0.2.1"
     }
 }
