--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
         "@inertiajs/progress": "^0.1.2",
         "@inertiajs/vue3": "^1.0.14",
         "@vitejs/plugin-vue": "^5.0.3",
-        "@vueuse/core": "^10.7.2",
-        "jquery": "^3.7.1",
+        "@vue/compiler-sfc": "^3.4.19",
         "lodash": "^4.17.21",
         "lodash.debounce": "^4.0.8",
         "sweetalert2": "^11.6.13",
