--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "pragmarx/countries": "^0.8.2",
-        "rinvex/countries": "^9.0",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+        "rinvex/countries": "^9.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "*",
