--- a/package.json
+++ b/package.json
@@ -3,27 +3,25 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build && vite build --ssr"
+        "build": "vite build && vite build --ssr && vite build && vite build --ssr --ssr && vite build && vite build --ssr && vite build && vite build --ssr --ssr --ssr"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@vitejs/plugin-vue": "^5.0.0",
-        "@vue/server-renderer": "^3.4.18",
-        "alpinejs": "^3.4.2",
+        "@vue/server-renderer": "^3.4.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
-        "vite": "^5.0.0",
-        "vue": "^3.4.0"
-    },
-    "dependencies": {
-        "@inertiajs/progress": "^0.1.2",
-        "@inertiajs/vue3": "^1.0.14",
-        "@vitejs/plugin-vue": "^5.0.3",
         "sweetalert2": "^11.6.13",
+        "vite": "^5.0.0",
+        "vue": "^3.4.0",
         "vue-loader": "^17.4.2",
         "vue3-select2-component": "^0.1.7",
         "vue3-toastify": "^0.2.1"
+    },
+    "dependencies": {
+        "tiny-emitter": "^2.1.0",
+        "vue-select": "^4.0.0-beta.6"
     }
 }
