--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
         "vite": "^5.0.0",
         "vue": "^3.4.0",
         "vue-loader": "^17.4.2",
-        "vue3-select2-component": "^0.1.7",
         "vue3-toastify": "^0.2.1"
     },
     "dependencies": {
-        "tiny-emitter": "^2.1.0",
-        "vue-select": "^4.0.0-beta.6"
+        "select2": "^4.1.0-rc.0",
+        "tiny-emitter": "^2.1.0"
     }
 }
