--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@types/select2": "^4.0.63",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/server-renderer": "^3.4.0",
         "autoprefixer": "^10.4.12",
@@ -20,7 +21,7 @@
         "vue3-toastify": "^0.2.1"
     },
     "dependencies": {
-        "select2": "^4.1.0-rc.0",
-        "tiny-emitter": "^2.1.0"
+        "tiny-emitter": "^2.1.0",
+        "vue-multiselect": "^3.0.0-beta.3"
     }
 }
