--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "amrshawky/laravel-currency": "^6.0",
         "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "tightenco/ziggy": "^1.0",
-        "rinvex/countries": "^9.0"
+        "rinvex/countries": "^9.0",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "*",
