--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "vue3-toastify": "^0.2.1"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.19",
+        "maz-ui": "^3.32.2",
+        "select2-bootstrap-5-theme": "^1.3.0",
         "tiny-emitter": "^2.1.0",
         "vue-multiselect": "^3.0.0-beta.3"
     }
