--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
         "vite": "^5.0.0",
         "vue": "^3.4.0",
         "vue-loader": "^17.4.2",
+        "vue3-select-component": "^0.1.3",
         "vue3-toastify": "^0.2.1"
     },
     "dependencies": {
-        "vue-multiselect": "^3.0.0-beta.3"
+        "vue-select2": "^0.2.6"
     }
 }
