--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "nerdsnipe/laravel-countries": "*",
         "rinvex/countries": "^9.0",
         "stichoza/google-translate-php": "^5.1",
         "tightenco/ziggy": "^1.0"
