fix product image delete, show product image uplode in front and back

--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
         "vue3-select-component": "^0.1.3",
         "vue3-toastify": "^0.2.1"
     },
-    "dependencies": {
-        "vue-select2": "^0.2.6"
-    }
+    "dependencies": {}
 }
