--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "nerdsnipe/laravel-countries": "*",
+        "monarobase/country-list": "^3.5",
         "rinvex/countries": "^9.0",
-        "stichoza/google-translate-php": "^5.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
