--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@types/select2": "^4.0.63",
+        "@types/vue-tel-input": "^2.1.6",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/server-renderer": "^3.4.0",
         "autoprefixer": "^10.4.12",
@@ -21,5 +22,7 @@
         "vue3-select-component": "^0.1.3",
         "vue3-toastify": "^0.2.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "vue-tel-input": "^8.3.1"
+    }
 }
