--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
+        "jantinnerezo/livewire-alert": "^3.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
         "tightenco/ziggy": "^1.0"
     },
