--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
+        "stichoza/google-translate-php": "^5.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
