--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,13 @@
         "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
         "stichoza/google-translate-php": "^5.1",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+        "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "*",
         "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.28",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
