--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "monarobase/country-list": "^3.5",
         "stichoza/google-translate-php": "^5.1",
         "tightenco/ziggy": "^1.0",
+        "victorybiz/laravel-tel-input": "^1.6",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
