--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.2",
         "@types/select2": "^4.0.63",
-        "@types/vue-tel-input": "^2.1.6",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/server-renderer": "^3.4.0",
         "alpinejs": "^3.4.2",
@@ -18,15 +16,11 @@
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "sweetalert2": "^11.6.13",
-        "tailwindcss": "^3.1.0",
         "vite": "^5.0.0",
         "vue": "^3.4.0",
         "vue-loader": "^17.4.2",
         "vue3-select-component": "^0.1.3",
         "vue3-toastify": "^0.2.1"
     },
-    "dependencies": {
-        "swiper": "^11.1.4",
-        "vue-tel-input": "^8.3.1"
-    }
+    "dependencies": {}
 }
