--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.2",
         "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
@@ -18,6 +19,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
+        "stichoza/google-translate-php": "^5.1",
         "tightenco/ziggy": "^1.0",
         "victorybiz/laravel-tel-input": "^1.6",
         "yoeunes/toastr": "^2.3"
