fix error and add logviewner

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
+        "opcodesio/log-viewer": "*",
         "stichoza/google-translate-php": "^5.1",
         "tightenco/ziggy": "^1.0",
         "victorybiz/laravel-tel-input": "^1.6",
