--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
-        "opcodesio/log-viewer": "*",
-        "stichoza/google-translate-php": "^5.1",
+        "opcodesio/log-viewer": "^3.10",
         "tightenco/ziggy": "^1.0",
         "victorybiz/laravel-tel-input": "^1.6",
         "yoeunes/toastr": "^2.3"
@@ -76,7 +75,5 @@
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    }
 }
