--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
+        "mews/captcha": "^3.3",
         "monarobase/country-list": "^3.5",
         "opcodesio/log-viewer": "^3.10",
         "tightenco/ziggy": "^1.0",
