--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
         "vue3-select-component": "^0.1.3",
         "vue3-toastify": "^0.2.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "datatables.net-bs5": "^2.1.4",
+        "datatables.net-vue3": "^3.0.2",
+        "datatables.net-buttons": "^2.3.2",
+        "datatables.net-buttons-dt": "^2.3.2",
+        "datatables.net-dt": "^1.13.1",
+        "datatables.net-responsive-dt": "^2.4.0",
+        "datatables.net-select": "^1.5.0",
+        "datatables.net-select-dt": "^1.5.0"
+    }
 }
