Add new themes for Flasher notifications: Jade, Material, Minimal, Neon, Onyx, Ruby, Sapphire, and Slack
- Implemented Jade theme with custom rendering and styles.
- Added Material theme with responsive design and animations.
- Introduced Minimal theme focusing on simplicity and clarity.
- Developed Neon theme featuring glowing effects and vibrant colors.
- Created Onyx theme with dark mode support and elegant styling.
- Launched Ruby theme with gradient backgrounds and shine effects.
- Established Sapphire theme with a modern aesthetic and smooth animations.
- Integrated Slack theme mimicking Slack's notification style with avatars and icons.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@flasher/flasher": "file:vendor/php-flasher/flasher/Resources",
         "@types/select2": "^4.0.63",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/server-renderer": "^3.4.0",
