--- a/composer.json
+++ b/composer.json
@@ -8,33 +8,26 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "barryvdh/laravel-dompdf": "^2.2",
-        "darryldecode/cart": "^4.2",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^0.6.8",
+        "inertiajs/inertia-laravel": "^2.0",
         "jantinnerezo/livewire-alert": "^3.0",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
+        "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
-        "mews/captcha": "^3.3",
         "monarobase/country-list": "^3.5",
-        "opcodesio/log-viewer": "^3.10",
-        "tightenco/ziggy": "^1.0",
-        "victorybiz/laravel-tel-input": "^1.6",
-        "yoeunes/toastr": "^2.3"
+        "php-flasher/flasher-laravel": "*",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "*",
         "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^11"
     },
     "autoload": {
         "psr-4": {
