feat: remove log viewer configuration, add email registration confirmation, and implement pending registration feature
- Deleted log-viewer.php configuration file.
- Added email registration confirmation messages in English and French.
- Implemented PendingRegistrationController to handle account activation via token.
- Created PendingRegistration model and migration for storing pending registrations.
- Added validation rules for non-disposable email addresses.
- Updated routes to include throttling for registration and confirmation.
- Integrated intl-tel-input for phone number input in registration forms.
- Removed captcha component from registration and contact forms.
- Updated frontend views to reflect changes in registration and email confirmation process.

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
         "php-flasher/flasher-laravel": "*",
+        "propaganistas/laravel-phone": "^6.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
