feat: Refactor PendingRegistrationController to use ClientResolverService for client management
- Introduced ClientResolverService to handle client resolution and creation.
- Updated user creation logic to associate users with clients.
- Removed redundant client lookup logic in PendingRegistrationController.
- Added client_id field to users table via migration.
- Updated StoreOrderRequest to streamline order creation process.
- Refactored Panier component to improve code organization.
- Enhanced various models with additional properties and relationships.
- Updated composer dependencies to include log-viewer package.
- Cleaned up code formatting and removed unnecessary comments.

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
         "monarobase/country-list": "^3.5",
+        "opcodesio/log-viewer": "^3.21",
         "php-flasher/flasher-laravel": "*",
         "propaganistas/laravel-phone": "^6.0",
         "tightenco/ziggy": "^1.0"
